deploy: 568799e506320eca1df8338d8bdd72b9e801af65

--- a/examples/index.html
+++ b/examples/index.html
@@ -304,7 +304,7 @@
   
     
   
-  API
+  API Reference
 
       </a>
     </li>
@@ -461,7 +461,7 @@
   
   
   <span class="md-ellipsis">
-    API
+    API Reference
     
   </span>
   
