--- a/install/index.html
+++ b/install/index.html
@@ -308,7 +308,7 @@
   
     
   
-  API
+  API Reference
 
       </a>
     </li>
@@ -607,7 +607,7 @@
   
   
   <span class="md-ellipsis">
-    API
+    API Reference
     
   </span>
   
