--- a/usage/index.html
+++ b/usage/index.html
@@ -308,7 +308,7 @@
   
     
   
-  API
+  API Reference
 
       </a>
     </li>
@@ -640,7 +640,7 @@
   
   
   <span class="md-ellipsis">
-    API
+    API Reference
     
   </span>
   
