deploy: 54e5259ed5ec64a24771b4e782f556905cb5bc44

--- a/index.html
+++ b/index.html
@@ -684,6 +684,7 @@
 <li><strong>Specialized constraints</strong>: Built-in support for inter-point spacing, boundary limits, and custom constraints  </li>
 <li><strong>Customized genetic operators</strong>: Crossover and mutation operators tailored to coordinate data  </li>
 <li><strong>Multi-objective optimization</strong>: Leveraging the proven NSGA-II algorithm  </li>
+<li><strong>Parallel computation</strong>: Accelerate optimization with parallel processing for computationally intensive problems  </li>
 <li><strong>Flexible region definitions</strong>: Supports both polygonal and rectangular regions  </li>
 <li><strong>Lightweight and extensible</strong>: Easy to add custom operators and constraints  </li>
 <li><strong>Progress tracking</strong>: Built-in progress bar and optimization history  </li>
