--- a/zh/index.html
+++ b/zh/index.html
@@ -684,6 +684,7 @@
 <li><strong>专业约束条件</strong>：内置支持点间距、边界限制和自定义约束</li>
 <li><strong>定制遗传算子</strong>：专门作用于坐标点的交叉和变异算子</li>
 <li><strong>多目标优化</strong>：基于成熟的NSGA-II算法</li>
+<li><strong>并行计算加速</strong>：支持计算密集型问题的并行处理加速</li>
 <li><strong>灵活区域定义</strong>：支持多边形和矩形区域</li>
 <li><strong>轻量级可扩展</strong>：易于自定义算子和约束条件</li>
 <li><strong>进度跟踪</strong>：内置进度条和优化历史记录</li>
