deploy: 8b4b4e25d2a71123ebf81e9adb9792a95b7167d4

--- a/index.html
+++ b/index.html
@@ -710,10 +710,11 @@
 <ul>
 <li>Python 3.8+</li>
 <li>NumPy &gt;= 1.23</li>
-<li>tqdm &gt;= 4</li>
+<li>tqdm &gt;= 4.64</li>
 <li>Shapely &gt;= 2</li>
+<li>matplotlib &gt;= 3.6</li>
+<li>joblib &gt;= 1.4</li>
 <li>SciPy (optional, for distance computations)</li>
-<li>matplotlib (optional, for result visualization)</li>
 </ul>
 
 
